--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag school_class_path do %>
+<%= form_tag new_school_class_path do %>
   <label>Title:</label><br>
   <%= text_field_tag :title %><br>
 
