Automatically backed up by Learn

--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_tag new_school_class_path do %>
   <label>Title:</label><br>
-  <%= text_field_tag :title %><br>
+  <%= text_field_tag :school_class_title %><br>
 
   <label>Room Number</label><br>
-  <%= text_area_tag :room_number %><br>
+  <%= text_area_tag :school_class_room_number %><br>
 
   <%= submit_tag "Submit School Class" %>
 <% end %>
