Automatically backed up by Learn

--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -5,5 +5,5 @@
   <label>Room Number</label><br>
   <%= text_area_tag :school_class_room_number %><br>
 
-  <%= submit_tag "Submit School Class" %>
+  <%= submit_tag "Create School Class" %>
 <% end %>
