--- a/app/views/school_class/edit.html.erb
+++ b/app/views/school_class/edit.html.erb
@@ -1,9 +1,9 @@
-<%= form_for(@school_classe) do |f| %>
+<%= form_for(@edit_school_classes) do |f| %>
   <label>Title:</label><br>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :school_class_title %><br>
  
   <label>Room Number:</label><br>
-  <%= f.text_field :room_number %><br>
+  <%= f.text_field :school_class_room_number %><br>
  
   <%= f.submit %>
 <% end %>
