Automatically backed up by Learn

--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :school_class_title %><br>
 
   <label>Room Number</label><br>
-  <%= text_area_tag :school_class_room_number %><br>
+  <%= f.text_field :school_class_room_number %><br>
 
   <%= submit_tag "Create School Class" %>
 <% end %>
