--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -5,5 +5,5 @@
   <label>Room Number</label><br>
   <%= f.text_field :school_class_room_number %><br>
 
-  <%= submit_tag "Create School Class" %>
+  <%= f.submit "Create School Class" %>
 <% end %>
