--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -4,6 +4,7 @@
 
   <label>Room Number</label><br>
   <%= f.text_field :school_class_room_number %><br>
-
-  <%= f.submit "Create School Class" %>
+  
+  <label>Create School Class</label><br>
+  <%= f.submit%>
 <% end %>
