--- a/app/views/student/new.html.erb
+++ b/app/views/student/new.html.erb
@@ -1,9 +1,10 @@
-<%= form_tag students_path do %>
+<%= form_for(@new_student_path) do |f| %>
   <label>First Name:</label><br>
-  <%= text_field_tag :first_name %><br>
+  <%= f.text_field :first_name %><br>
 
   <label>Last Name:</label><br>
-  <%= text_area_tag :last_name %><br>
-
-  <%= submit_tag "Submit Student" %>
+  <%= f.text_field :last_name %><br>
+  
+  <label>Create Student</label><br>
+  <%= f.submit%>
 <% end %>
