--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@new_school_class_path) do |f| %>
+<%= form_for(new_school_class_path) do |f| %>
   <label>Title:</label><br>
   <%= f.text_field :school_class_title %><br>
 
