--- a/app/views/student/new.html.erb
+++ b/app/views/student/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@new_student_path) do |f| %>
+<%= form_for(new_student_path) do |f| %>
   <label>First Name:</label><br>
   <%= f.text_field :first_name %><br>
 
