--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -1,10 +1,7 @@
-<%= form_for(new_school_class_path) do |f| %>
-  <label>Title:</label><br>
-  <%= f.text_field :school_class_title %><br>
-
-  <label>Room Number</label><br>
-  <%= f.text_field :school_class_room_number %><br>
-  
-  <label>Create School Class</label><br>
-  <%= f.submit%>
+<%= form_for(@school_class) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :room_number %>
+  <%= f.text_field :room_number %>
+  <%= f.submit %>
 <% end %>
