--- a/app/views/school_class/new.html.erb
+++ b/app/views/school_class/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@school_class) do |f| %>
+<%= form_for(@new_school_class_path) do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
   <%= f.label :room_number %>
